--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "vue": "^2.5.2",
+    "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.18.2",
+    "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.0.14",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -41,6 +46,11 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "ts-loader": "^3.5.0",
+    "tslint": "^6.1.2",
+    "tslint-config-standard": "^9.0.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.9.5",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
