--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "mavon-editor": "^2.9.0",
     "vue": "^2.5.2",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.18.2",
